tests/NormalTests/paczka1/small_fuzzy/63465221.err
Error in line 2: S708 S708 37,8
Error in line 4: 8j4fUkDOw4 A164 4,4
